// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> DoubleColorWithoutIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-i7d2y2 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Primary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1fx534y MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> PrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1rjbjgf MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-rnnxvu MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-lntjho MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-nvo84b MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-2f1izi MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Secondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-5rpum9 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> SecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-70uuq8 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Test story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1fx534y MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  data-testid="tags"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> TripleColorWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-gdvf0n MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;
